--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-checklist": "^1.3.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "ngx-webstorage": "^2.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
